[gd_scene load_steps=10 format=3 uid="uid://cbcekd2k5t808"]

[ext_resource type="Script" uid="uid://cvebse24nfe4o" path="res://Scenes/BlueDoor/blue_door.gd" id="1_o2sg7"]
[ext_resource type="Texture2D" uid="uid://dh47ov1evhjbg" path="res://Resources/Textures/puertasBordes.png" id="2_osveh"]
[ext_resource type="Texture2D" uid="uid://bb7gdevg26a4n" path="res://Resources/Textures/puertas64_1.png" id="3_2u04o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rl688"]
size = Vector2(62, 9)

[sub_resource type="Animation" id="Animation_rl688"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gv3j8"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwb6t"]
_data = {
&"RESET": SubResource("Animation_rl688"),
&"open": SubResource("Animation_gv3j8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwb6t"]
size = Vector2(52, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3viil"]
size = Vector2(52, 21)

[node name="BlueDoor" type="Node2D"]
script = ExtResource("1_o2sg7")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(7, 0)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(27, 0)
scale = Vector2(0.921875, 1)
texture = ExtResource("3_2u04o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(32, 0.5)
shape = SubResource("RectangleShape2D_rl688")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(16, 0)
texture = ExtResource("2_osveh")
hframes = 8
frame = 4

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(48, 0)
texture = ExtResource("2_osveh")
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vwb6t")
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(16, -19)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_vwb6t")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(16, 20)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(16, 0.5)
shape = SubResource("RectangleShape2D_3viil")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_body_exited"]
